<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jk.codez.MainActivity">
    <item
        android:id="@+id/action_remote"
        android:orderInCategory="100"
        android:title="@string/action_remote"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_local"
        android:orderInCategory="100"
        android:visible="false"
        android:title="@string/action_local"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_connection"
        android:orderInCategory="100"
        android:visible="false"
        android:title="@string/action_connection"
        app:showAsAction="never" />
</menu>