<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_connection_title"
        android:text="@string/set_connection"
        android:layout_below="@id/btn_set_connection"
        android:layout_marginTop="23dp"
        android:textAlignment="center"
        android:textSize="39sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_current_connection_title"
        android:text="@string/current_connection"
        android:layout_below="@id/tv_connection_title"
        android:layout_marginTop="23dp"
        android:textSize="23sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_current_connection"
        android:text="@string/none"
        android:layout_below="@id/tv_current_connection_title"
        android:layout_marginTop="23dp"
        android:textAlignment="center"
        android:textSize="29sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_connection_input"
        android:hint="@string/enter_url"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="textWebEditText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_set_connection"
        android:text="@string/set"
        android:layout_marginTop="33dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>