<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#444"
    tools:context=".fragments.LocalFragment">

    <com.jk.codez.AutoCompTvWithButtons
        android:id="@+id/localSearchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_here"
        android:completionThreshold="1"
        android:layout_alignParentTop="true" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_sort_local"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_number_local"
            android:text="@string/number"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_street_local"
            android:text="@string/street"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reverse_local"
            android:text="@string/reverse"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ProgressBar android:id="@+id/pb_local"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_codes_local"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:layout_below="@id/ll_sort_local"
        tools:listitem="@layout/item_view" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        app:srcCompat="@android:drawable/ic_input_add"
        android:contentDescription="@string/button" />

</RelativeLayout>